<resources>
    <string name="app_name">GroupUpPlace</string>
    <string name="newPlace">New Place</string>
    <string name="name">Name Place</string>
    <string name="details">Details</string>
    <string name="select_theme">select theme</string>
    <string name="priceRange">Price range</string>
    <string name="bath">Bath</string>
    <string name="phone">Phone</string>
    <string name="facility">Facility :</string>
    <string name="parking">Parking</string>
    <string name="wifi">Wi-Fi</string>
    <string name="credit">Credit Card</string>
    <string name="kids">Good for Kids</string>
    <string name="air">Air conditioning</string>
    <string name="room">Private Room</string>
    <string name="bts">Near BTS</string>
    <string name="mrt">Near MRT</string>
    <string name="numberOfSeats">Number of seats</string>
    <string name="seats">seats</string>
    <string name="deposite">Deposite</string>
    <string name="btn">Confirm</string>
    <string name="theme">Theme</string>
    <string name="search_theme">Search Theme</string>
    <string name="restaurant_type">Restaurant Type</string>
    <string name="coffee_tea">Coffee/Tea Shop</string>
    <string name="cafe">Cafe</string>
    <string name="riverside">Riverside</string>
    <string name="karaoke">Karaoke</string>
    <string name="clubs">Clubs</string>
    <string name="wine_Bar">Wine Bar</string>
    <string name="pub">Pub</string>
    <string name="late_night_rice">Late Night Rice Porridge</string>
    <string name="vegeterian">Vegeterian</string>
    <string name="hotel_buffet">Hotel Buffet</string>
    <string name="rooftop">Rooftop</string>
    <string name="izakaya">Izakaya</string>
    <string name="food_type">Food Type</string>
    <string name="alacarte">A La Carte</string>
    <string name="dessert">Dessert</string>
    <string name="seafood">Seafood</string>
    <string name="steak">Steak House</string>
    <string name="iceCream">Ice Cream</string>
    <string name="bakery_cake">Bakery/Cake</string>
    <string name="bbq">Grill/BBQ</string>
    <string name="shabu">Shabu/Sukiyaki</string>
    <string name="buffet">Buffet</string>
    <string name="cleanFood">Clean Food/Salad</string>
    <string name="thai_bbq">Thai BBQ</string>
    <string name="pizza">Pizza</string>
    <string name="sushi">Sushi</string>
    <string name="burger">Burger</string>
    <string name="ramen">Ramen</string>
    <string name="dimsum">Dim Sum</string>
    <string name="vegan">Vegan</string>
    <string name="atmosphere_type">Atmosphere Type</string>
    <string name="original">Original</string>
    <string name="bar">Bar</string>
    <string name="outdoor">OutDoor</string>
    <string name="cozy">Cozy</string>
    <string name="family">Family</string>
    <string name="minimal">Minimal</string>
    <string name="warm">Warm</string>
    <string name="child">Child</string>
    <string name="myPlace">My Place</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="account">Manage Account</string>
    <string name="signout">Signout</string>
    <string name="addImg">+ Add Picture</string>
    <string name="name_title">Name :</string>
    <string name="email">Email</string>
    <string name="email_title">Email :</string>
    <string name="manage_calendar">Manage calendar</string>
    <string name="import_calendar">import calendar event</string>
    <string name="custom">Custom</string>
    <string name="namePlace">Name Place :</string>
    <string name="descriptionPlace">Description :</string>
    <string name="rating">Rating :</string>
    <string name="modify">Modiify</string>
    <string name="group_theme">Group</string>
    <string name="classic">Classic</string>
    <string name="waterFront">Waterfront</string>
    <string name="sky">rooftop</string>
    <string name="forkids">For Kids</string>
    <string name="alert">Alert</string>
    <string name="getCalen">Get Calendar</string>
    <string name="delCalen">Delete Calendar All</string>
    <string name="time_morning">11:00 - 13:59</string>
    <string name="time_late">14:00 - 16:59</string>
    <string name="time_afternoon">17:00 - 19:59</string>
    <string name="time_evening">20:00 - 23:59</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="msg_subscribe_failed">Subscribe To failed</string>
    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="default_notification_channel_name">Channel ID</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">fcm_message</string>
    <string name="btn_cancle">cancle</string>
    <string name="time">Opening hours</string>
    <string name="date">Opening date</string>
    <string name="select_time">Select Time</string>
    <string name="to">To</string>
    <string name="everyday">Everyday</string>
    <string name="monfri">Mon - Fri</string>
    <string name="satsun">Sat - Sun</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="manage_place">Manage Place</string>
    <string name="edit_theme">Edit Theme</string>
    <string name="see_review">see review</string>
    <string name="alert_name">Place : </string>
    <string name="alert_date">Date : </string>
    <string name="alert_event">Name Event : </string>
    <string name="alert_creater">Name : </string>
    <string name="alert_email">Email : </string>
    <string name="alert_time">Time : </string>
</resources>
